--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "post-config": "^0.0.4-alpha.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@tailwindcss/forms": "^0.5.7",
     "tailwindcss": "^3.4.0"
   }
 }
